--- a/specification/mixedreality/data-plane/Microsoft.MixedReality/preview/0.3-preview.0/examples/CreateAssetConversionJob.json
+++ b/specification/mixedreality/data-plane/Microsoft.MixedReality/preview/0.3-preview.0/examples/CreateAssetConversionJob.json
@@ -6,7 +6,7 @@
     "x-mrc-cv": "dKEFmka2kkSlDmp/af+sOw",
     "body": {
       "assetFileType": "string",
-      "inputAssetUri": "string",
+      "inputAssetUri": "https://example.uri",
       "ingestionConfiguration": {
         "dimensions": {
           "x": 0,
@@ -81,10 +81,10 @@
         "clientErrorDetails": "string",
         "serverErrorDetails": "string",
         "jobId": "3fa85f64-5717-4562-b3fc-2c963f66afa6",
-        "outputModelUri": "string",
+        "outputModelUri": "https://example.uri",
         "jobStatus": "NotStarted",
         "assetFileType": "string",
-        "inputAssetUri": "string",
+        "inputAssetUri": "https://example.uri",
         "accountId": "3fa85f64-5717-4562-b3fc-2c963f66afa6",
         "ingestionConfiguration": {
           "dimensions": {
