Add jvmOptions for Jar type

--- a/specification/appplatform/resource-manager/Microsoft.AppPlatform/preview/2022-01-01-preview/appplatform.json
+++ b/specification/appplatform/resource-manager/Microsoft.AppPlatform/preview/2022-01-01-preview/appplatform.json
@@ -8587,6 +8587,10 @@
         "runtimeVersion": {
           "description": "Runtime version of the Jar file",
           "type": "string"
+        },
+        "jvmOptions": {
+          "description": "JVM parameter",
+          "type": "string"
         }
       },
       "x-ms-discriminator-value": "Jar"
