--- a/specification/datamigration/resource-manager/Microsoft.DataMigration/stable/2021-06-30/definitions/TasksCommon.json
+++ b/specification/datamigration/resource-manager/Microsoft.DataMigration/stable/2021-06-30/definitions/TasksCommon.json
@@ -462,6 +462,10 @@
           "type": "string",
           "description": "Name of the database"
         },
+        "id": {
+          "type": "string",
+          "description": "id of the database"
+        },
         "targetDatabaseName": {
           "type": "string",
           "description": "Name of target database. Note: Target database will be truncated before starting migration."
@@ -735,6 +739,10 @@
         "name": {
           "type": "string",
           "description": "Name of the database"
+        },
+        "id": {
+          "type": "string",
+          "description": "id of the database"
         },
         "restoreDatabaseName": {
           "type": "string",
