Add a field for BYOC.

--- a/specification/appplatform/resource-manager/Microsoft.AppPlatform/preview/2022-02-01-preview/appplatform.json
+++ b/specification/appplatform/resource-manager/Microsoft.AppPlatform/preview/2022-02-01-preview/appplatform.json
@@ -8697,6 +8697,10 @@
         "imageRegistryCredential": {
           "$ref": "#/definitions/ImageRegistryCredential",
           "description": "Credential of the image registry"
+        },
+        "languageFramework": {
+          "description": "Language framework of the container image uploaded",
+          "type": "string"
         }
       }
     },
