s 360 error fixes for 2021-10-30 version

--- a/specification/datamigration/resource-manager/Microsoft.DataMigration/preview/2021-10-30-preview/definitions/Projects.json
+++ b/specification/datamigration/resource-manager/Microsoft.DataMigration/preview/2021-10-30-preview/definitions/Projects.json
@@ -31,7 +31,7 @@
           "description": "Metadata pertaining to creation and last modification of the resource.",
           "readOnly": true
         },
-        "eTag": {
+        "etag": {
           "type": "string",
           "description": "HTTP strong entity tag value. This is ignored if submitted."
         }
@@ -69,7 +69,7 @@
         },
         "azureAuthenticationInfo": {
           "description": "Field that defines the Azure active directory application info, used to connect to the target Azure resource",
-          "type": "string"
+          "type": "object"
         },
         "targetPlatform": {
           "description": "Target platform for the project",
