--- a/specification/datamigration/resource-manager/Microsoft.DataMigration/preview/2021-10-30-preview/definitions/Tasks.json
+++ b/specification/datamigration/resource-manager/Microsoft.DataMigration/preview/2021-10-30-preview/definitions/Tasks.json
@@ -197,6 +197,10 @@
             "$ref": "./ConnectToSourceSqlServerTask.json#/definitions/ConnectToSourceSqlServerTaskOutput"
           },
           "readOnly": true
+        },
+        "taskId": {
+          "type": "string",
+          "description": "Task id "
         }
       },
       "allOf": [
@@ -317,6 +321,10 @@
             "$ref": "./ConnectToTargetSqlDbTask.json#/definitions/ConnectToTargetSqlDbTaskOutput"
           },
           "readOnly": true
+        },
+        "createdOn": {
+          "type": "string",
+          "description": "DateTime in UTC when the task was created"
         }
       },
       "allOf": [
@@ -413,6 +421,10 @@
             "$ref": "./GetUserTablesSqlTask.json#/definitions/GetUserTablesSqlTaskOutput"
           },
           "readOnly": true
+        },
+        "taskId": {
+          "type": "string",
+          "description": "Task id "
         }
       },
       "allOf": [
@@ -687,6 +699,10 @@
         "isCloneable": {
           "type": "boolean",
           "description": "whether the task can be cloned or not"
+        },
+        "createdOn": {
+          "type": "string",
+          "description": "DateTime in UTC when the task was created"
         }
       },
       "allOf": [
