--- a/specification/netapp/resource-manager/Microsoft.NetApp/stable/2021-08-01/netapp.json
+++ b/specification/netapp/resource-manager/Microsoft.NetApp/stable/2021-08-01/netapp.json
@@ -63,6 +63,11 @@
           "default": {
             "description": "Error response describing why the operation failed."
           }
+        },
+        "x-ms-examples": {
+          "CheckNameAvailability": {
+            "$ref": "examples/OperationList.json"
+          }
         }
       }
     },
