--- a/specification/netapp/resource-manager/Microsoft.NetApp/stable/2021-08-01/netapp.json
+++ b/specification/netapp/resource-manager/Microsoft.NetApp/stable/2021-08-01/netapp.json
@@ -65,7 +65,7 @@
           }
         },
         "x-ms-examples": {
-          "CheckNameAvailability": {
+          "OperationList": {
             "$ref": "examples/OperationList.json"
           }
         }
