--- a/specification/app/resource-manager/Microsoft.App/preview/2022-01-01-preview/ContainerApps.json
+++ b/specification/app/resource-manager/Microsoft.App/preview/2022-01-01-preview/ContainerApps.json
@@ -321,7 +321,10 @@
           "type": "array",
           "items": {
             "$ref": "#/definitions/Secret"
-          }
+          },
+          "x-ms-identifiers": [
+            "name"
+          ]
         },
         "activeRevisionsMode": {
           "description": "ActiveRevisionsMode controls how active revisions are handled for the Container app:\n<list><item>Multiple: multiple revisions can be active. If no value if provided, this is the default</item><item>Single: Only one revision can be active at a time. Revision weights can not be used in this mode</item></list>",
@@ -344,7 +347,10 @@
           "type": "array",
           "items": {
             "$ref": "#/definitions/RegistryCredentials"
-          }
+          },
+          "x-ms-identifiers": [
+            "server"
+          ]
         }
       }
     },
@@ -478,7 +484,10 @@
           "type": "array",
           "items": {
             "$ref": "#/definitions/TrafficWeight"
-          }
+          },
+          "x-ms-identifiers": [
+            "revisionName"
+          ]
         },
         "allowInsecure": {
           "description": "Bool indicating if HTTP connections to is allowed. If set to false HTTP connections are automatically redirected to HTTPS connections",
