--- a/specification/resources/resource-manager/Microsoft.Solutions/preview/2020-08-21-preview/managedapplications.json
+++ b/specification/resources/resource-manager/Microsoft.Solutions/preview/2020-08-21-preview/managedapplications.json
@@ -248,6 +248,11 @@
         ],
         "operationId": "Applications_Update",
         "description": "Updates an existing managed application. The only value that can be updated via PATCH currently is the tags.",
+        "x-ms-examples": {
+          "Create or update managed application": {
+            "$ref": "./examples/updateApplication.json"
+          }
+        },
         "parameters": [
           {
             "name": "resourceGroupName",
