update files with new api 2022-01-01
adding new api to readme

--- a/specification/servicefabricmanagedclusters/resource-manager/Microsoft.ServiceFabric/stable/2022-01-01/examples/ApplicationGetOperation_example.json
+++ b/specification/servicefabricmanagedclusters/resource-manager/Microsoft.ServiceFabric/stable/2022-01-01/examples/ApplicationGetOperation_example.json
@@ -4,7 +4,7 @@
     "resourceGroupName": "resRg",
     "clusterName": "myCluster",
     "applicationName": "myApp",
-    "api-version": "2021-11-01-preview"
+    "api-version": "2022-01-01"
   },
   "responses": {
     "200": {
