--- a/specification/servicefabricmanagedclusters/resource-manager/Microsoft.ServiceFabric/stable/2022-01-01/examples/ApplicationTypeNamePatchOperation_example.json
+++ b/specification/servicefabricmanagedclusters/resource-manager/Microsoft.ServiceFabric/stable/2022-01-01/examples/ApplicationTypeNamePatchOperation_example.json
@@ -4,7 +4,7 @@
     "resourceGroupName": "resRg",
     "clusterName": "myCluster",
     "applicationTypeName": "myAppType",
-    "api-version": "2021-11-01-preview",
+    "api-version": "2022-01-01",
     "parameters": {
       "tags": {
         "a": "b"
