--- a/specification/servicefabricmanagedclusters/resource-manager/Microsoft.ServiceFabric/stable/2022-01-01/examples/ApplicationTypeVersionGetOperation_example.json
+++ b/specification/servicefabricmanagedclusters/resource-manager/Microsoft.ServiceFabric/stable/2022-01-01/examples/ApplicationTypeVersionGetOperation_example.json
@@ -5,7 +5,7 @@
     "clusterName": "myCluster",
     "applicationTypeName": "myAppType",
     "version": "1.0",
-    "api-version": "2021-11-01-preview"
+    "api-version": "2022-01-01"
   },
   "responses": {
     "200": {
