--- a/specification/sqlvirtualmachine/resource-manager/Microsoft.SqlVirtualMachine/preview/2021-11-01-preview/examples/CreateOrUpdateSqlVirtualMachineStorageConfigurationEXTEND.json
+++ b/specification/sqlvirtualmachine/resource-manager/Microsoft.SqlVirtualMachine/preview/2021-11-01-preview/examples/CreateOrUpdateSqlVirtualMachineStorageConfigurationEXTEND.json
@@ -11,9 +11,7 @@
         "storageConfigurationSettings": {
           "diskConfigurationType": "EXTEND",
           "sqlDataSettings": {
-            "luns": [
-              2
-            ]
+            "luns": [2]
           }
         }
       }
