add missing files, spellcheck, add MAXDOP to custom-words

--- a/specification/sqlvirtualmachine/resource-manager/Microsoft.SqlVirtualMachine/preview/2021-11-01-preview/examples/CreateOrUpdateSqlVirtualMachineStorageConfigurationNEW.json
+++ b/specification/sqlvirtualmachine/resource-manager/Microsoft.SqlVirtualMachine/preview/2021-11-01-preview/examples/CreateOrUpdateSqlVirtualMachineStorageConfigurationNEW.json
@@ -20,8 +20,14 @@
             "luns": [1]
           },
           "sqlTempDbSettings": {
-            "defaultFilePath": "D:\\TEMP"
-          }
+            "defaultFilePath": "D:\\TEMP",
+            "DataFileSize": 256,
+            "DataGrowth": 512,
+            "LogFileSize": 256,
+            "LogGrowth": 512,
+            "DataFileCount": 8
+          },
+          "sqlSystemDbOnDataDisk": true
         }
       }
     }
