adding systemData property

--- a/specification/datamigration/resource-manager/Microsoft.DataMigration/preview/2022-01-30-preview/definitions/Tasks.json
+++ b/specification/datamigration/resource-manager/Microsoft.DataMigration/preview/2022-01-30-preview/definitions/Tasks.json
@@ -322,9 +322,10 @@
           },
           "readOnly": true
         },
-        "createdOn": {
-          "type": "string",
-          "description": "DateTime in UTC when the task was created"
+        "systemData": {
+          "$ref": "../sqlmigration.json#/definitions/SystemData",
+          "description": "Metadata pertaining to creation and last modification of the resource.",
+          "readOnly": true
         }
       },
       "allOf": [
@@ -644,9 +645,10 @@
           "type": "string",
           "description": "task id"
         },
-        "createdOn": {
-          "type": "string",
-          "description": "DateTime in UTC when the task was created"
+        "systemData": {
+          "$ref": "../sqlmigration.json#/definitions/SystemData",
+          "description": "Metadata pertaining to creation and last modification of the resource.",
+          "readOnly": true
         },
         "parentTaskId": {
           "type": "string",
@@ -708,9 +710,10 @@
           "type": "boolean",
           "description": "whether the task can be cloned or not"
         },
-        "createdOn": {
-          "type": "string",
-          "description": "DateTime in UTC when the task was created"
+        "systemData": {
+          "$ref": "../sqlmigration.json#/definitions/SystemData",
+          "description": "Metadata pertaining to creation and last modification of the resource.",
+          "readOnly": true
         }
       },
       "allOf": [
@@ -812,9 +815,10 @@
           "type": "string",
           "description": "task id"
         },
-        "createdOn": {
-          "type": "string",
-          "description": "DateTime in UTC when the task was created"
+        "systemData": {
+          "$ref": "../sqlmigration.json#/definitions/SystemData",
+          "description": "Metadata pertaining to creation and last modification of the resource.",
+          "readOnly": true
         }
       },
       "allOf": [
