adding schema for azureAuthenticationInfo

--- a/specification/datamigration/resource-manager/Microsoft.DataMigration/preview/2022-01-30-preview/definitions/Projects.json
+++ b/specification/datamigration/resource-manager/Microsoft.DataMigration/preview/2022-01-30-preview/definitions/Projects.json
@@ -69,7 +69,8 @@
         },
         "azureAuthenticationInfo": {
           "description": "Field that defines the Azure active directory application info, used to connect to the target Azure resource",
-          "type": "object"
+          "type": "object",
+          "$ref": "./definitions/Common.json#/definitions/AzureActiveDirectoryApp"
         },
         "targetPlatform": {
           "description": "Target platform for the project",
