Revert "adding systemData property"
This reverts commit a0e3edef990325243127e1b51c7ce1e6c4ef905a.

--- a/specification/datamigration/resource-manager/Microsoft.DataMigration/preview/2022-01-30-preview/definitions/Tasks.json
+++ b/specification/datamigration/resource-manager/Microsoft.DataMigration/preview/2022-01-30-preview/definitions/Tasks.json
@@ -322,10 +322,9 @@
           },
           "readOnly": true
         },
-        "systemData": {
-          "$ref": "../sqlmigration.json#/definitions/SystemData",
-          "description": "Metadata pertaining to creation and last modification of the resource.",
-          "readOnly": true
+        "createdOn": {
+          "type": "string",
+          "description": "DateTime in UTC when the task was created"
         }
       },
       "allOf": [
@@ -645,10 +644,9 @@
           "type": "string",
           "description": "task id"
         },
-        "systemData": {
-          "$ref": "../sqlmigration.json#/definitions/SystemData",
-          "description": "Metadata pertaining to creation and last modification of the resource.",
-          "readOnly": true
+        "createdOn": {
+          "type": "string",
+          "description": "DateTime in UTC when the task was created"
         },
         "parentTaskId": {
           "type": "string",
@@ -710,10 +708,9 @@
           "type": "boolean",
           "description": "whether the task can be cloned or not"
         },
-        "systemData": {
-          "$ref": "../sqlmigration.json#/definitions/SystemData",
-          "description": "Metadata pertaining to creation and last modification of the resource.",
-          "readOnly": true
+        "createdOn": {
+          "type": "string",
+          "description": "DateTime in UTC when the task was created"
         }
       },
       "allOf": [
@@ -815,10 +812,9 @@
           "type": "string",
           "description": "task id"
         },
-        "systemData": {
-          "$ref": "../sqlmigration.json#/definitions/SystemData",
-          "description": "Metadata pertaining to creation and last modification of the resource.",
-          "readOnly": true
+        "createdOn": {
+          "type": "string",
+          "description": "DateTime in UTC when the task was created"
         }
       },
       "allOf": [
