fix model validation errors

--- a/specification/sqlvirtualmachine/resource-manager/Microsoft.SqlVirtualMachine/preview/2021-11-01-preview/examples/CreateOrUpdateSqlVirtualMachineStorageConfigurationNEW.json
+++ b/specification/sqlvirtualmachine/resource-manager/Microsoft.SqlVirtualMachine/preview/2021-11-01-preview/examples/CreateOrUpdateSqlVirtualMachineStorageConfigurationNEW.json
@@ -25,11 +25,11 @@
           },
           "sqlTempDbSettings": {
             "defaultFilePath": "D:\\TEMP",
-            "DataFileSize": 256,
-            "DataGrowth": 512,
-            "LogFileSize": 256,
-            "LogGrowth": 512,
-            "DataFileCount": 8
+            "dataFileSize": 256,
+            "dataGrowth": 512,
+            "logFileSize": 256,
+            "logGrowth": 512,
+            "dataFileCount": 8
           },
           "sqlSystemDbOnDataDisk": true
         }
