--- a/specification/webpubsub/data-plane/WebPubSub/preview/2021-08-01-preview/scenarios/basic.yaml
+++ b/specification/webpubsub/data-plane/WebPubSub/preview/2021-08-01-preview/scenarios/basic.yaml
@@ -1,5 +1,8 @@
-# yaml-language-server: $schema=/home/me/workspace/azure-rest-api-specs/documentation/api-scenario/references/v1.1/schema.json
+# yaml-language-server: $schema=/home/me/workspace/azure-rest-api-specs/documentation/api-scenario/references/v1.2/schema.json
 scope: ResourceGroup
+
+swaggers:
+  - ../webpubsub.json
 
 variables:
   Endpoint: https://endpoint.net
