--- a/specification/signalr/resource-manager/Microsoft.SignalRService/preview/2021-06-01-preview/scenarios/signalR.yaml
+++ b/specification/signalr/resource-manager/Microsoft.SignalRService/preview/2021-06-01-preview/scenarios/signalR.yaml
@@ -1,6 +1,9 @@
-# yaml-language-server: $schema=https://raw.githubusercontent.com/Azure/azure-rest-api-specs/leni/doc/documentation/test-scenario/references/v1.1/schema.json
-
+# yaml-language-server: $schema=/home/me/workspace/azure-rest-api-specs/documentation/api-scenario/references/v1.2/schema.json
 scope: ResourceGroup
+
+swaggers:
+  - ../signalr.json
+
 # variables:
 #   resourceName: signalrswaggertest4
 
