--- a/specification/workloads/resource-manager/Microsoft.Workloads/preview/2021-12-01-preview/examples/sapvirtualinstances/SAPApplicationServerInstances_Create.json
+++ b/specification/workloads/resource-manager/Microsoft.Workloads/preview/2021-12-01-preview/examples/sapvirtualinstances/SAPApplicationServerInstances_Create.json
@@ -28,7 +28,7 @@
           "lastModifiedAt": "2021-08-19T15:10:46.196Z"
         },
         "properties": {
-          "instanceNo": 1,
+          "instanceNo": "01",
           "subnet": null,
           "hostname": "vh-nw1",
           "kernelVersion": "777",
@@ -61,7 +61,7 @@
           "lastModifiedAt": "2021-08-19T15:10:46.196Z"
         },
         "properties": {
-          "instanceNo": 1,
+          "instanceNo": "01",
           "subnet": null,
           "hostname": "vh-nw1",
           "kernelVersion": "777",
