--- a/specification/workloads/resource-manager/Microsoft.Workloads/preview/2021-12-01-preview/examples/sapvirtualinstances/SAPApplicationServerInstances_Get.json
+++ b/specification/workloads/resource-manager/Microsoft.Workloads/preview/2021-12-01-preview/examples/sapvirtualinstances/SAPApplicationServerInstances_Get.json
@@ -23,7 +23,7 @@
           "lastModifiedAt": "2021-08-19T15:10:46.196Z"
         },
         "properties": {
-          "instanceNo": 0,
+          "instanceNo": "00",
           "subnet": null,
           "hostname": "vh-nw1",
           "kernelVersion": "777",
