--- a/specification/workloads/resource-manager/Microsoft.Workloads/preview/2021-12-01-preview/examples/sapvirtualinstances/SAPApplicationServerInstances_Update.json
+++ b/specification/workloads/resource-manager/Microsoft.Workloads/preview/2021-12-01-preview/examples/sapvirtualinstances/SAPApplicationServerInstances_Update.json
@@ -30,7 +30,7 @@
           "lastModifiedAt": "2021-08-19T15:10:46.196Z"
         },
         "properties": {
-          "instanceNo": 1,
+          "instanceNo": "01",
           "subnet": null,
           "hostname": "vh-nw1",
           "kernelVersion": "777",
@@ -63,7 +63,7 @@
           "lastModifiedAt": "2021-08-19T15:10:46.196Z"
         },
         "properties": {
-          "instanceNo": 1,
+          "instanceNo": "01",
           "subnet": null,
           "hostname": "vh-nw1",
           "kernelVersion": "777",
